Need to finish main.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <body style="background:blue">
 <h1 style="text-align:center">Index.html</h1>
+<div style = "background:black;color:white">
+<a href="little_prince/little_prince.html" target="_blank"> Little Prince!</a>
+</div>
 <div style="background: white;color:purple">
 <p style="font-family:Arial;text-align:center">This is a paragraph about Kayla Henry. I am from Baltimore, MD studying at North Carolina A&T State University pursing a bachelor's degree in Computer Science. My hobbies include basketball, anime, spades amd working out. I am in my junior year at A&T but hope to pursue my master's immediately after graduating. This class may be easy to other but I migh struggle so I show up to class so be patient with me, I'm trying.</p>
 <img src ="ME.jpg" width="300" height="300"/>
@@ -21,6 +24,5 @@
 <div style="background:yellow;color:green">
 <a href="./introduction.html" target="_blank"> Click Me!</a>
 </div>
-<a href="./little_prince.html" target="_blank"> Little Prince!</a>
 </body>
 </html>
